<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ItemEditFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleItemEditTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/title"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/subtitleItemEditTIL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleItemEditET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="50"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/subtitleItemEditTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/subtitle"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/imageItemEditCV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleItemEditTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subtitleItemEditET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/imageItemEditCV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toTopOf="@+id/descriptionItemEditTIL"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitleItemEditTIL">

            <ImageView
                android:id="@+id/imageItemEditIV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/BlueGray50"
                android:contentDescription="@string/itemImageDescription"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_item_image" />

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/insertItemEditFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/imageItemEditCV"
            app:layout_constraintEnd_toEndOf="@+id/imageItemEditCV"
            app:layout_constraintTop_toBottomOf="@+id/imageItemEditCV"
            app:srcCompat="@drawable/ic_add_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionItemEditTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/description"
            app:counterEnabled="true"
            app:counterMaxLength="400"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/expiryDateItemEditTIL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageItemEditCV">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionItemEditET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="400"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expiryDateItemEditTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/expiry_date"
            app:endIconMode="none"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/categoryItemEditTIL"
            app:layout_constraintEnd_toStartOf="@id/priceItemEditTIL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionItemEditTIL"
            app:startIconDrawable="@drawable/ic_date_range">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/expiryDateItemEditET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceItemEditTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/price"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="@+id/expiryDateItemEditTIL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/expiryDateItemEditTIL"
            app:layout_constraintTop_toTopOf="@+id/expiryDateItemEditTIL"
            app:prefixText="@string/currency"
            app:startIconDrawable="@drawable/ic_local_offer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceItemEditET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="50"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoryItemEditTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/category"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/locationMapItemEditMV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expiryDateItemEditTIL"
            app:startIconDrawable="@drawable/ic_category">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/categoryItemEditAT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.gms.maps.MapView
            android:id="@+id/locationMapItemEditMV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@id/searchLocationItemEditET"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryItemEditTIL" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchLocationItemEditET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:autofillHints="addressLocality"
            android:hint="@string/search_location"
            android:inputType="textPostalAddress"
            android:maxLength="100"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/searchLocationItemEditBTN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationMapItemEditMV" />

        <Button
            android:id="@+id/searchLocationItemEditBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/search_button"
            app:layout_constraintBottom_toBottomOf="@+id/searchLocationItemEditET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/searchLocationItemEditET"
            app:layout_constraintTop_toTopOf="@+id/searchLocationItemEditET" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>